# opencv_usb_cam

./: CMakeLists.txt  README.md  package.xml
src/: detect_line.cpp  opencv_usb_cam.cpp
